[project]
name = "observatory"
version = "0.3.0"
description = "Observable python!"
authors = [
    { name = "Ed Whetstone" },
    {name = "sharpencrag", email = "ed.whetstone@gmail.com"},
]
dependencies = [
    "typing-extensions>=4.7.1",
]
requires-python = ">=3.7"
readme = "README.md"
keywords = [
    "event",
    "observer",
    "observability",
    "observables",
    "pubsub",
    "pub-sub",
    "publish",
    "subscribe",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.license]
file = "LICENSE"
[project.urls]
homepage = "https://github.com/sharpencrag/observatory"
documentation = "https://github.com/sharpencrag/observatory#readme"
repository = "https://github.com/sharpencrag/observatory"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
